[package]
name = "arp-foo-bar"
version = "0.1.0"
edition = "2021"
description = "Shared library"
keywords = ["axum", "plugin"]
categories = ["plugins"]
repository = "https://github.com/mrhdias/arp-foo-bar"
authors = ["Henrique Dias <mrhdias@gmail.com>"]
readme = "README.md"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
hyper = "1.4.1"
once_cell = "1.19.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
url = "2.5.2"
